--- a/templates/ajax/game/town/workshop.html.twig
+++ b/templates/ajax/game/town/workshop.html.twig
@@ -58,10 +58,10 @@
             <div class="padded cell rw-6 hide-desktop hide-lg">
                 {% trans from 'game' %}Umwandlung{% endtrans %}
             </div>
-            <div class="padded cell rw-3 hide-sm hide-md left">
+            <div class="padded cell rw-2 hide-sm hide-md center">
                 {% trans from 'game' %}Material{% endtrans %}
             </div>
-            <div class="padded cell rw-3 hide-sm hide-md left">
+            <div class="padded cell rw-4 hide-sm hide-md center">
                 {% trans from 'game' %}Hergestellter Gegenstand{% endtrans %}
             </div>
             <div class="padded cell rw-1">
