--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -440,8 +440,11 @@
                 complainButtons[i].addEventListener('click', function() {
                     let reason = 0;
                     if(document.getElementById("reason"))
-                        reason = document.getElementById("reason").value;
-                    $.ajax.easySend( '{{ path('town_visit_complain_controller', {id: owner.id}) }}', {severity: parseInt(complainButtons[i].getAttribute('x-complaint-severity')), reason: reason},
+                        reason = parseInt(document.getElementById("reason").value);
+
+                    if (reason === 0)
+                        $.html.error(' {{ 'Du musst für deine Beschwerde eine Begründung angeben.'|trans({},'game') }} ');
+                    else $.ajax.easySend( '{{ path('town_visit_complain_controller', {id: owner.id}) }}', {severity: parseInt(complainButtons[i].getAttribute('x-complaint-severity')), reason},
                         function () {
                             $.ajax.load(null, '{{ path('town_visit', {id: owner.id}) }}', true);
                         } );
