--- a/templates/ajax/game/jobs.html.twig
+++ b/templates/ajax/game/jobs.html.twig
@@ -71,6 +71,10 @@
                 </div>
             {% endfor %}
         </div>
+            <br/>
+            <p class="ambiant">
+                {{ 'Du suchst dir besser eine Beschäftigung aus, denn es gilt: Ohne Job, kein Leben. Wozu bist du denn sonst gut? Die Gemeinschaft, der du angehören wirst, braucht jede Art von Personen. Die Zusammenarbeit mit den anderen wird zweifelsohne deine Überlebensdauer entscheidend beeinflussen...'|trans({},'game') }}
+            </p>
             <br />
             <div class="cell rw-12">
                 <div class="row">
