--- a/templates/ajax/soul/season.html.twig
+++ b/templates/ajax/soul/season.html.twig
@@ -107,7 +107,7 @@
                                                 {% else %}
                                                     <div class="inline-block"><img src="{{ asset("build/images/death/inside.gif") }}" alt="" /> <div class="tooltip">{{ 'In der Stadt gestorben'|trans({}, 'soul') }}</div></div>
                                                 {% endif %}
-                                                {% include 'ajax/soul/playername.html.twig' with {user: denizen.user} only %}
+                                                {% include 'ajax/soul/playername.html.twig' with {user: denizen.user, additional_classes: ['undecorated']} only %}
                                             </div>
                                             <div class="cell padded rw-1" style="color:#f8eacb">{{ denizen.day }}</div>
                                             <div class="cell padded rw-4"><em>{{ denizen.lastWords|replace({'{gotKilled}': '...der Mörder .. ist.. IST.. AAARGHhh..'|trans({},'game')}) }}</em></div>
@@ -183,7 +183,7 @@
                             <div class="cell rw-1 season_entry_td center soul_season_flag"><img src="{% if player.language %} {{ asset("build/images/lang/" ~ player.language ~".png") }} {% else %} {{ asset("build/images/lang/multi.png") }} {% endif %}" alt="{{ user.language }}" /></div>
                             <div class="cell rw-1 season_entry_td center">{{ pos }}</div>
                             <div class="cell rw-6 season_entry_td left soul_season_name">
-                                {% include 'ajax/soul/playername.html.twig' with {user: player} only %}
+                                {% include 'ajax/soul/playername.html.twig' with {user: player, additional_classes: ['undecorated']} only %}
                             </div>
                             <div class="cell rw-4 season_entry_td center soul_season_points">{{ points }}</div>
                         </div>
