--- a/templates/ajax/soul/user_tooltip.html.twig
+++ b/templates/ajax/soul/user_tooltip.html.twig
@@ -108,4 +108,67 @@
     </div>
 
     {{ include('ajax/flash.html.twig') }}
+
+    <script>
+        $.html.addEventListenerAll('#user-tooltip a[x-action="block_user"]','click',(e,elem) => {
+            e.preventDefault();
+            if (confirm(
+                '{{ 'Wenn du diesen Spieler blockierst, kann er dir keine neuen Nachrichten schicken. Werdet ihr beide von einer dritten Person in eine Gruppennachricht hinzugefügt, so werden Beiträge des blockierten Spielers standartmäßig für dich versteckt.'|trans({},'global')|e('js') }}' +
+                '\n\n{{ 'Möchtest du fortfahren?'|trans({},'global')|e('js') }}'
+            ))
+                var url = '{{ path('soul_block_control', {id: 0, action: 1}) }}';
+            url = url.replace("0", user_id);
+            $.ajax.easySend( url, {},
+                function () {
+                    $.ajax.load(target, "{{ path('soul_tooltip') }}", false, {'id': user_id}, function(){
+                        addActions(user_id, target, source);
+                    });
+                } );
+        });
+
+        $.html.addEventListenerAll('#user-tooltip a[x-action="unblock_user"]','click',(e,elem) => {
+            e.preventDefault();
+            if (confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+                var url = '{{ path('soul_block_control', {id: 0, action: 0}) }}';
+            url = url.replace("0", user_id);
+            $.ajax.easySend( url, {},
+                function () {
+                    $.ajax.load(target, "{{ path('soul_tooltip') }}", false, {'id': user_id}, function(){
+                        addActions(user_id, target, source);
+                    });
+                });
+        });
+
+        $.html.addEventListenerAll('#user-tooltip a[x-action="add-friend"]', 'click', (e, elem) => {
+            $.ajax.easySend( '{{ path('soul_friend_control', {action: 1}) }}', {'id': elem.getAttribute('x-friend-id')},
+                function () {
+                    $.ajax.load(target, "{{ path('soul_tooltip') }}", false, {'id': user_id}, function(){
+                        addActions(user_id, target, source);
+                        let userElements = document.querySelectorAll('.username[x-user-id="' + user_id + '"]');
+                        for(let i = 0 ; i < userElements.length ; i++)
+                            userElements[i].classList.add("is-friend");
+                    });
+                });
+        });
+
+        $.html.addEventListenerAll('#user-tooltip a[x-action="remove-friend"]', 'click', (e, elem) => {
+            $.ajax.easySend( '{{ path('soul_friend_control', {action: 0}) }}', {'id': elem.getAttribute('x-friend-id')},
+                function () {
+                    $.ajax.load(target, "{{ path('soul_tooltip') }}", false, {'id': user_id}, function(){
+                        addActions(user_id, target, source);
+                        let userElements = document.querySelectorAll('.username[x-user-id="' + user_id + '"]');
+                        for(let i = 0 ; i < userElements.length ; i++)
+                            userElements[i].classList.remove("is-friend");
+                    });
+                });
+        });
+
+        $.html.addEventListenerAll('#user-tooltip a[x-action="send-pm"]', 'click', (e, elem) => {
+            const p = document.getElementById('postbox');
+            if (p) {
+                p.setAttribute('x-post-command', elem.getAttribute('x-user-connect'));
+                p.click();
+            } else alert('{{ 'Fehler beim Laden des Posteingangs.'|trans({},'global') }}')
+        });
+    </script>
 {% endblock %}
