--- a/templates/ajax/pm/view.html.twig
+++ b/templates/ajax/pm/view.html.twig
@@ -336,7 +336,8 @@
                         ['x-block'   , 'block-sender'],
                         ['x-archive' , 'archive-single'],
                         ['x-restore' , 'restore-single'],
-                        ['x-archive' , 'refresh-single']
+                        ['x-archive' , 'refresh-single'],
+                        ['x-userlist', 'show-users']
                     ];
 
                     button_conf.forEach((conf) => {
