--- a/templates/ajax/game/beyond/ruin.html.twig
+++ b/templates/ajax/game/beyond/ruin.html.twig
@@ -92,6 +92,7 @@
                         {% endif %}
                         <button id="unlock_button">
                             {{ 'Tür aufschließen'|trans({},'game') }}
+                            <div class="tooltip help">{{ 'Mit dem richtigen Schlüssel kannst du diese Tür öffnen.'|trans({},'game') }}</div>
                         </button>
                     {% endif %}
                 {% endif %}
